--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="content-banner">
       <div class="content">
        <div class="content-text">
-        <h1>Andres Romero xd</h1>
+        <h1>Andres Romero</h1>
         <p>Desarrollador Web</p>
        </div>
         <div class="img">
