--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <p>
       Soy desrollador web, actualmente vivo en México, mi objetivo es desarollarme profesionalmente para obtener experiencia laboral en el desarrollo web.
         <br><br>
-      Soy autididacta, me gustan los retos, aprendo con facilidad, analizo las explicaciones que me aportan en aprendizajes relacionados con la programación y adquiero la habilidad de estimar números como resoloviendo algoritmos.
+      Soy autididacta, me gustan los retos, aprendo con facilidad, analizo las explicaciones que me aportan en aprendizajes relacionados con la programación y adquiero la habilidad de estimar números como resolviendo algoritmos.
       <br><br>
       En mi camino de desarrollador he creado algunos trabajos como los que se muestran abajo.
     </p>
