--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
   <script type="text/javascript" src="styles.js"></script>
   <script src="https://kit.fontawesome.com/effd4a3746.js"></script>
-  <title>Mi portafolio</title>
+  <title>Portafolio Andres Romero</title>
 </head>
 <body>
     <!-- Banner -->
   <div class="banner separador ">
+    <!-- Header -->
     <header>
       <nav>
         <div id="burguer-container">
@@ -23,12 +24,13 @@
         <div id="menu-options">
           <ul>
           <li><a href="#">Trabajos</a></li>
-          <li><a href="">Sobre Mi</a></li>
+          <li><a href="">Perfil</a></li>
           <li><a href="#">Contacto</a></li>
         </ul>
          </div>
       </nav>
     </header>
+    <!-- /header -->
     <div class="content-banner">
       <div class="content">
        <div class="content-text">
@@ -36,16 +38,19 @@
         <p>Desarrollador Web</p>
        </div>
         <div class="img">
-              <img src="https://gravatar.com/avatar/c62f79bd56d071220b89fae967495391?s=80&d=https://static.codepen.io/assets/avatars/user-avatar-80x80-bdcd44a3bfb9a5fd01eb8b86f9e033fa1a9897c3a15b33adfc2649a002dab1b6.png" alt="">
+              <img
+                src="https://media-exp1.licdn.com/dms/image/C4E03AQH7gAsfod4SqQ/profile-displayphoto-shrink_200_200/0?e=1601510400&v=beta&t=x1b5Qml6F7JZdV6DvYv95G8fMDtntrlWHa0O3-CT9ME"
+                alt=""
+              >
         </div>
       </div>
     </div>
   </div>
 
-  <!-- About -->
+<!-- About -->
 <div class="about">
-  <div class="text-about text-center">
-    <h2 class="verde">Sobre Mi</h2>
+  <div class="text-about -text-center">
+    <h2 class="verde">Perfil</h2>
     <div class="border-about"></div>
     <div class="about-content">
       <h3>Hola, mi nombre es Andres</h3>
@@ -54,18 +59,22 @@
         <br><br>
       Soy autididacta, me gustan los retos, aprendo con facilidad, analizo las explicaciones que me aportan en aprendizajes relacionados con la programación y adquiero la habilidad de estimar números como resolviendo algoritmos.
       <br><br>
-      En mi camino de desarrollador he creado algunos trabajos como los que se muestran abajo.
+      En mi camino de desarrollador he creado algunos proyectos y practicas como los que se muestran abajo.
     </p>
     </div>
   </div>
 </div>
-  
-  <!-- Trabajos -->
+<!-- /About -->
+
+<!-- Trabajos -->
   <section class="background-container ">  
     <section class="container separador-c sin-separador">
-      <h2 class="text-center border-bottom">Trabajos</h2>
-      <div class="row">
-        <div class="column text-center is-5 is-4">
+      <!-- Pryectos -->
+      <h2 class="-text-center border-bottom">Proyectos</h2>
+      <div class="-row -mb">
+
+        <!-- card -->
+        <div class="column -text-center is-5 is-4">
            <div class="border-column">
              <div class="column-img">
               <img src="https://gravatar.com/avatar/c62f79bd56d071220b89fae967495391?s=80&d=https://static.codepen.io/assets/avatars/user-avatar-80x80-bdcd44a3bfb9a5fd01eb8b86f9e033fa1a9897c3a15b33adfc2649a002dab1b6.png" alt="">
@@ -76,84 +85,30 @@
           </div>
           </div>
         </div>
-        <div class="column text-center is-5 is-4">
-           <div class="border-column">
-            <div class="column-img">
-              <img src="https://gravatar.com/avatar/c62f79bd56d071220b89fae967495391?s=80&d=https://static.codepen.io/assets/avatars/user-avatar-80x80-bdcd44a3bfb9a5fd01eb8b86f9e033fa1a9897c3a15b33adfc2649a002dab1b6.png" alt="">
-          </div>
-            <div class="column-text">
-            <h4 class="verde">Lorem impsu</h4>
-            <p>HTML - CSS</p>
-          </div>
-          </div>
-        </div>
-        <div class="column text-center is-5 is-4">
-           <div class="border-column">
-            <div class="column-img">
-              <img src="https://gravatar.com/avatar/c62f79bd56d071220b89fae967495391?s=80&d=https://static.codepen.io/assets/avatars/user-avatar-80x80-bdcd44a3bfb9a5fd01eb8b86f9e033fa1a9897c3a15b33adfc2649a002dab1b6.png" alt="">
-          </div>
-            <div class="column-text">
-            <h4 class="verde">Lorem impsu</h4>
-            <p>HTML - CSS</p>
-          </div>
-          </div>
-        </div>
-        <div class="column text-center is-5 is-4">
-           <div class="border-column">
-             <div class="column-img">
-              <img src="https://gravatar.com/avatar/c62f79bd56d071220b89fae967495391?s=80&d=https://static.codepen.io/assets/avatars/user-avatar-80x80-bdcd44a3bfb9a5fd01eb8b86f9e033fa1a9897c3a15b33adfc2649a002dab1b6.png" alt="">
-          </div>
-             <div class="column-text">
-            <h4 class="verde">Lorem impsu</h4>
-            <p>HTML - CSS</p>
-          </div>
-          </div>
-        </div>
-        <div class="column text-center is-5 is-4">
-           <div class="border-column">
-             <div class="column-img">
-              <img src="https://gravatar.com/avatar/c62f79bd56d071220b89fae967495391?s=80&d=https://static.codepen.io/assets/avatars/user-avatar-80x80-bdcd44a3bfb9a5fd01eb8b86f9e033fa1a9897c3a15b33adfc2649a002dab1b6.png" alt="">
-          </div>
-             <div class="column-text">
-            <h4 class="verde">Lorem impsu</h4>
-            <p>HTML - CSS</p>
-          </div>
-          </div>
-        </div>
-        <div class="column text-center is-5 is-4">
-           <div class="border-column">
-            <div class="column-img">
-              <img src="https://gravatar.com/avatar/c62f79bd56d071220b89fae967495391?s=80&d=https://static.codepen.io/assets/avatars/user-avatar-80x80-bdcd44a3bfb9a5fd01eb8b86f9e033fa1a9897c3a15b33adfc2649a002dab1b6.png" alt="">
-          </div>
-            <div class="column-text">
-            <h4 class="verde">Lorem impsu</h4>
-            <p>HTML - CSS</p>
-          </div>
-          </div>
-        </div>
-        <div class="column text-center is-5 is-4">
-           <div class="border-column">
-            <div class="column-img">
-              <img src="https://gravatar.com/avatar/c62f79bd56d071220b89fae967495391?s=80&d=https://static.codepen.io/assets/avatars/user-avatar-80x80-bdcd44a3bfb9a5fd01eb8b86f9e033fa1a9897c3a15b33adfc2649a002dab1b6.png" alt="">
-          </div>
-            <div class="column-text">
-            <h4 class="verde">Lorem impsu</h4>
-            <p>HTML - CSS</p>
-          </div>
-          </div>
-        </div>
-        <div class="column text-center is-5 is-4">
-        <div class="border-column">
-          <div class="column-img">
-              <img src="https://gravatar.com/avatar/c62f79bd56d071220b89fae967495391?s=80&d=https://static.codepen.io/assets/avatars/user-avatar-80x80-bdcd44a3bfb9a5fd01eb8b86f9e033fa1a9897c3a15b33adfc2649a002dab1b6.png" alt="">
-          </div>
-          <div class="column-text">
-            <h4 class="verde">Lorem impsu</h4>
-            <p>HTML - CSS</p>
-          </div>
-          </div>
-        </div>
+        <!-- /card -->
       </div>
+      <!-- /proyectos -->
+
+      <!-- Practicas -->
+      <h2 class="-text-center border-bottom">Practicas</h2>
+      <div class="-row">
+
+        <!-- card -->
+        <div class="column -text-center is-5 is-4">
+           <div class="border-column">
+             <div class="column-img">
+              <img src="https://gravatar.com/avatar/c62f79bd56d071220b89fae967495391?s=80&d=https://static.codepen.io/assets/avatars/user-avatar-80x80-bdcd44a3bfb9a5fd01eb8b86f9e033fa1a9897c3a15b33adfc2649a002dab1b6.png" alt="">
+          </div>
+             <div class="column-text">
+            <h4 class="verde">Lorem impsu</h4>
+            <p>HTML - CSS</p>
+          </div>
+          </div>
+        </div>
+        <!-- /card -->
+      </div>
+      <!-- /practicas -->
+
   </section>
   </section>
 
@@ -163,7 +118,7 @@
     <form action="" class="separador-1">
       <div class="is-6">
         <div class="inputs">
-          <h3 class="text-center verde">Contacto</h3>
+          <h3 class="-text-center verde">Contacto</h3>
           <div class="input-content">
             <input type="text" class="text is medium" placeholder="Nombre:">
             <input type="email" class="email is medium" placeholder="Correo:">
@@ -174,31 +129,31 @@
         </div>
       </div>
       <div class="is-6 ubicacion">
-        <div class="is-6 email-ubicacion text-center">
-           <img src="https://www.flaticon.es/premium-icon/icons/svg/211/211563.svg" alt="">
+        <div class="is-6 -text-center">
+           <i class="fa -ico fa-envelope-o" aria-hidden="true"></i>
           <h4  class="verde">Correo</h4>
           <p>amclres@gmail.com</p>
         </div>
-        <div class="is-6 pais-ubicacion text-center">
-          <img src="https://image.flaticon.com/icons/svg/302/302827.svg" alt="">
+        <div class="is-6 -text-center">
+          <i class="fa -ico fa-map-marker" aria-hidden="true"></i>
           <h4 class="verde">Ubicación</h4>
           <p>México</p>
         </div>
       </div>
     </form>
+  <!-- /Contacto -->
+
   <!--  redes-sociales  -->
     <div class="redes-sociales">
-      <a href="#">
-        <i class="fab fa-twitter"></i>
+      <a href="https://www.linkedin.com/in/andres-romero-069b961a8/" target="_blank">
+        <i class="fab fa-linkedin-in"></i>
       </a>
-      <a href="#">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="#">
+      <a href="https://github.com/Andresrom1123/" target="_blank">
         <i class="fab fa-github-alt"></i>
       </a>
     </div>
+  <!-- /redes-sociales -->
   </footer>
-  
+  <!-- /footer -->
 </body>
 </html>
