--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
-  <script type="text/javascript" src="styles.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/effd4a3746.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <title>Portafolio Andres Romero</title>
 </head>
 <body>
-    <!-- Banner -->
+  <!-- Banner -->
   <div class="banner separador ">
     <!-- Header -->
     <header>
@@ -23,9 +24,10 @@
         </div>
         <div id="menu-options">
           <ul>
-          <li><a href="#">Trabajos</a></li>
-          <li><a href="">Perfil</a></li>
-          <li><a href="#">Contacto</a></li>
+          <li><a class="text-decoration-none" href="#Proyectos">Proyectos</a></li>
+          <li><a class="text-decoration-none" href="#Practicas">Practicas</a></li>
+          <li><a class="text-decoration-none" href="#Perfil">Perfil</a></li>
+          <li><a class="text-decoration-none" href="#Contacto">Contacto</a></li>
         </ul>
          </div>
       </nav>
@@ -48,84 +50,80 @@
   </div>
 
 <!-- About -->
-<div class="about">
-  <div class="text-about -text-center">
-    <h2 class="verde">Perfil</h2>
-    <div class="border-about"></div>
-    <div class="about-content">
-      <h3>Hola, mi nombre es Andres</h3>
-      <p>
-      Soy desrollador web, actualmente vivo en México, mi objetivo es desarollarme profesionalmente para obtener experiencia laboral en el desarrollo web.
+  <a name="Perfil" />
+  <div class="about">
+    <div class="text-about -text-center">
+      <h2 class="verde">Perfil</h2>
+      <div class="border-about"></div>
+      <div class="about-content">
+        <h3>Hola, mi nombre es Andres</h3>
+        <p>
+        Soy desrollador web, actualmente vivo en México, mi objetivo es desarollarme profesionalmente para obtener experiencia laboral en el desarrollo web.
+          <br><br>
+        Soy autididacta, me gustan los retos, aprendo con facilidad, analizo las explicaciones que me aportan en aprendizajes relacionados con la programación y adquiero la habilidad de estimar números como resolviendo algoritmos.
         <br><br>
-      Soy autididacta, me gustan los retos, aprendo con facilidad, analizo las explicaciones que me aportan en aprendizajes relacionados con la programación y adquiero la habilidad de estimar números como resolviendo algoritmos.
-      <br><br>
-      En mi camino de desarrollador he creado algunos proyectos y practicas como los que se muestran abajo.
-    </p>
+        En mi camino de desarrollador he creado algunos proyectos y practicas como los que se muestran abajo.
+      </p>
+      </div>
     </div>
   </div>
-</div>
 <!-- /About -->
 
 <!-- Trabajos -->
-  <section class="background-container ">  
-    <section class="container separador-c sin-separador">
+  <section class="background-container ">
+    <div id="app" class="container separador-c sin-separador">
       <!-- Pryectos -->
-      <h2 class="-text-center border-bottom">Proyectos</h2>
-      <div class="-row -mb">
-
+      <a name="Proyectos" />
+      <h2 class="-text-center -border-bottom mb-4">Proyectos</h2>
+      <div class="row m-0">
         <!-- card -->
-        <div class="column -text-center is-5 is-4">
-           <div class="border-column">
-             <div class="column-img">
-              <img src="https://gravatar.com/avatar/c62f79bd56d071220b89fae967495391?s=80&d=https://static.codepen.io/assets/avatars/user-avatar-80x80-bdcd44a3bfb9a5fd01eb8b86f9e033fa1a9897c3a15b33adfc2649a002dab1b6.png" alt="">
-          </div>
-             <div class="column-text">
-            <h4 class="verde">Lorem impsu</h4>
-            <p>HTML - CSS</p>
-          </div>
-          </div>
-        </div>
+        <card
+          v-for="card in cardProject"
+          v-bind:key="card.id"
+          v-bind:title="card.title"
+          v-bind:description="card.description"
+          v-bind:image="card.image"
+          v-bind:url="card.url"
+        ></card>
         <!-- /card -->
       </div>
       <!-- /proyectos -->
 
       <!-- Practicas -->
-      <h2 class="-text-center border-bottom">Practicas</h2>
-      <div class="-row">
+      <a name="Practicas" />
+      <h2 class="-text-center -border-bottom mb-4">Practicas</h2>
+      <div class="row m-0">
 
         <!-- card -->
-        <div class="column -text-center is-5 is-4">
-           <div class="border-column">
-             <div class="column-img">
-              <img src="https://gravatar.com/avatar/c62f79bd56d071220b89fae967495391?s=80&d=https://static.codepen.io/assets/avatars/user-avatar-80x80-bdcd44a3bfb9a5fd01eb8b86f9e033fa1a9897c3a15b33adfc2649a002dab1b6.png" alt="">
-          </div>
-             <div class="column-text">
-            <h4 class="verde">Lorem impsu</h4>
-            <p>HTML - CSS</p>
-          </div>
-          </div>
-        </div>
+        <card
+          v-for="card in cardPractices"
+          v-bind:key="card.id"
+          v-bind:title="card.title"
+          v-bind:description="card.description"
+          v-bind:image="card.image"
+          v-bind:url="card.url"
+        ></card>
         <!-- /card -->
       </div>
       <!-- /practicas -->
 
-  </section>
+  </div>
   </section>
 
   <!-- Footer -->
+  <a name="Contacto" />
   <footer>
   <!--  Contacto  -->
-    <form action="" class="separador-1">
+    <div class="-form separador-1">
       <div class="is-6">
         <div class="inputs">
           <h3 class="-text-center verde">Contacto</h3>
-          <div class="input-content">
-            <input type="text" class="text is medium" placeholder="Nombre:">
-            <input type="email" class="email is medium" placeholder="Correo:">
-          <textarea name="" class="is" placeholder="Mensaje:"></textarea>
-  <!--           <input type="submit" class="submit" value="Enviar"> -->
-            <a href="#" class="submit">Enviar</a>
-        </div>
+          <form class="input-content">
+            <input type="text" class="text is medium ml-0 mr-3" placeholder="Nombre:">
+            <input type="email" class="email is medium mx-0" placeholder="Correo:">
+            <textarea name="" class="is" placeholder="Mensaje:"></textarea>
+            <input type="submit" class="submit mt-4" value="Enviar">
+        </form>
         </div>
       </div>
       <div class="is-6 ubicacion">
@@ -140,7 +138,7 @@
           <p>México</p>
         </div>
       </div>
-    </form>
+    </div>
   <!-- /Contacto -->
 
   <!--  redes-sociales  -->
@@ -155,5 +153,7 @@
   <!-- /redes-sociales -->
   </footer>
   <!-- /footer -->
+  <script src="js/main.js"></script>
+  <script type="text/javascript" src="js/styles.js"></script>
 </body>
 </html>
