--- a/index.html
+++ b/index.html
@@ -114,25 +114,14 @@
   <a name="Contacto" />
   <footer>
   <!--  Contacto  -->
-    <div class="-form separador-1">
-      <div class="is-6">
-        <div class="inputs">
-          <h3 class="-text-center verde">Contacto</h3>
-          <form class="input-content">
-            <input type="text" class="text is medium ml-0 mr-3" placeholder="Nombre:">
-            <input type="email" class="email is medium mx-0" placeholder="Correo:">
-            <textarea name="" class="is" placeholder="Mensaje:"></textarea>
-            <input type="submit" class="submit mt-4" value="Enviar">
-        </form>
-        </div>
-      </div>
-      <div class="is-6 ubicacion">
-        <div class="is-6 -text-center">
+    <div class="my-5 tex-center">
+      <div class="">
+        <div class="-text-center mb-5">
            <i class="fa -ico fa-envelope-o" aria-hidden="true"></i>
           <h4  class="verde">Correo</h4>
           <p>amclres@gmail.com</p>
         </div>
-        <div class="is-6 -text-center">
+        <div class="-text-center">
           <i class="fa -ico fa-map-marker" aria-hidden="true"></i>
           <h4 class="verde">Ubicación</h4>
           <p>México</p>
