--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
 
   <!--  redes-sociales  -->
     <div class="redes-sociales">
-      <a href="https://www.linkedin.com/in/andres-romero-069b961a8/" target="_blank">
+      <a class="px-0 mr-4" href="https://www.linkedin.com/in/andres-romero-069b961a8/" target="_blank">
         <i class="fab fa-linkedin-in"></i>
       </a>
-      <a href="https://github.com/Andresrom1123/" target="_blank">
+      <a class="px-0" href="https://github.com/Andresrom1123/" target="_blank">
         <i class="fab fa-github-alt"></i>
       </a>
     </div>
