added a new practice

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
           v-bind:description="card.description"
           v-bind:image="card.image"
           v-bind:url="card.url"
+          v-bind:codigo="card.codigo"
         ></card>
         <!-- /card -->
       </div>
@@ -102,6 +103,7 @@
           v-bind:description="card.description"
           v-bind:image="card.image"
           v-bind:url="card.url"
+          v-bind:codigo="card.codigo"
         ></card>
         <!-- /card -->
       </div>
